PLSQL3Parser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 PLSQL3.g 2014-06-04 15:33:41

import org.antlr.stringtemplate.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
public class PLSQL3Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "N", "WS", "'DECLARE'", "'BEGIN'", "'END'", "'LOOP'", "'IF'", "'THEN'", "'exit;'", "'END IF;'", "'END LOOP;'", "'CREATE OR REPLACE FUNCTION'", "'RETURN'", "';'", "'IS'", "'END;'", "'WHILE'", "'FOR'", "'in'", "'..'", "'CREATE OR REPLACE PROCEDURE'", "'AS'", "'ELSE'", "':='", "'number'", "'varchar'", "'float'", "'dbms_output.put_line('", "');'", "'SELECT'", "'INTO'", "'FROM'", "'='", "'();'", "'('", "'<'", "'>'", "'+'", "')'"
    };
    public static final int EOF=-1;
    public static final int T__7=7;
    public static final int T__8=8;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int ID=4;
    public static final int N=5;
    public static final int WS=6;

    // delegates
    // delegators

    protected static class slist_scope {
        List locals;
        List stats;
    }
    protected Stack slist_stack = new Stack();


        public PLSQL3Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PLSQL3Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("PLSQL3ParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return PLSQL3Parser.tokenNames; }
    public String getGrammarFileName() { return "PLSQL3.g"; }


    protected static class program_scope {
        List globals;
    }
    protected Stack program_stack = new Stack();

    public static class program_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "program"
    // PLSQL3.g:15:1: program : 'DECLARE' ( declaration )+ 'BEGIN' ( block )+ 'END' -> program(globals=$program::globals);
    public final PLSQL3Parser.program_return program() throws RecognitionException {
        program_stack.push(new program_scope());
        PLSQL3Parser.program_return retval = new PLSQL3Parser.program_return();
        retval.start = input.LT(1);


          ((program_scope)program_stack.peek()).globals = new ArrayList();

        try {
            // PLSQL3.g:22:5: ( 'DECLARE' ( declaration )+ 'BEGIN' ( block )+ 'END' -> program(globals=$program::globals))
            // PLSQL3.g:22:9: 'DECLARE' ( declaration )+ 'BEGIN' ( block )+ 'END'
            {
            match(input,7,FOLLOW_7_in_program47); 
            // PLSQL3.g:23:9: ( declaration )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ID) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // PLSQL3.g:23:9: declaration
            	    {
            	    pushFollow(FOLLOW_declaration_in_program57);
            	    declaration();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            match(input,8,FOLLOW_8_in_program68); 
            // PLSQL3.g:25:13: ( block )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==ID||(LA2_0>=10 && LA2_0<=11)||LA2_0==16||(LA2_0>=21 && LA2_0<=22)||LA2_0==25||LA2_0==32||LA2_0==34) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // PLSQL3.g:25:13: block
            	    {
            	    pushFollow(FOLLOW_block_in_program82);
            	    block();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);

            match(input,9,FOLLOW_9_in_program93); 


            // TEMPLATE REWRITE
            // 27:9: -> program(globals=$program::globals)
            {
                retval.st = templateLib.getInstanceOf("program",
              new STAttrMap().put("globals", ((program_scope)program_stack.peek()).globals));
            }


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            program_stack.pop();
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class block_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "block"
    // PLSQL3.g:30:1: block : ( assignment | printstatement | sql_query | conditionals | loops | wloop | floop | procedure | function | funccall | procall );
    public final PLSQL3Parser.block_return block() throws RecognitionException {
        PLSQL3Parser.block_return retval = new PLSQL3Parser.block_return();
        retval.start = input.LT(1);

        PLSQL3Parser.assignment_return assignment1 = null;

        PLSQL3Parser.printstatement_return printstatement2 = null;

        PLSQL3Parser.sql_query_return sql_query3 = null;

        PLSQL3Parser.conditionals_return conditionals4 = null;

        PLSQL3Parser.loops_return loops5 = null;

        PLSQL3Parser.wloop_return wloop6 = null;

        PLSQL3Parser.floop_return floop7 = null;

        PLSQL3Parser.procedure_return procedure8 = null;

        PLSQL3Parser.function_return function9 = null;

        PLSQL3Parser.funccall_return funccall10 = null;

        PLSQL3Parser.procall_return procall11 = null;


        try {
            // PLSQL3.g:31:5: ( assignment | printstatement | sql_query | conditionals | loops | wloop | floop | procedure | function | funccall | procall )
            int alt3=11;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // PLSQL3.g:31:7: assignment
                    {
                    pushFollow(FOLLOW_assignment_in_block127);
                    assignment1=assignment();

                    state._fsp--;

                    ((program_scope)program_stack.peek()).globals.add((assignment1!=null?assignment1.st:null));

                    }
                    break;
                case 2 :
                    // PLSQL3.g:32:7: printstatement
                    {
                    pushFollow(FOLLOW_printstatement_in_block137);
                    printstatement2=printstatement();

                    state._fsp--;

                    ((program_scope)program_stack.peek()).globals.add((printstatement2!=null?printstatement2.st:null));

                    }
                    break;
                case 3 :
                    // PLSQL3.g:33:7: sql_query
                    {
                    pushFollow(FOLLOW_sql_query_in_block148);
                    sql_query3=sql_query();

                    state._fsp--;

                    ((program_scope)program_stack.peek()).globals.add((sql_query3!=null?sql_query3.st:null));

                    }
                    break;
                case 4 :
                    // PLSQL3.g:34:7: conditionals
                    {
                    pushFollow(FOLLOW_conditionals_in_block162);
                    conditionals4=conditionals();

                    state._fsp--;

                    ((program_scope)program_stack.peek()).globals.add((conditionals4!=null?conditionals4.st:null));

                    }
                    break;
                case 5 :
                    // PLSQL3.g:35:7: loops
                    {
                    pushFollow(FOLLOW_loops_in_block173);
                    loops5=loops();

                    state._fsp--;

                    ((program_scope)program_stack.peek()).globals.add((loops5!=null?loops5.st:null));

                    }
                    break;
                case 6 :
                    // PLSQL3.g:36:7: wloop
                    {
                    pushFollow(FOLLOW_wloop_in_block183);
                    wloop6=wloop();

                    state._fsp--;

                    ((program_scope)program_stack.peek()).globals.add((wloop6!=null?wloop6.st:null));

                    }
                    break;
                case 7 :
                    // PLSQL3.g:37:7: floop
                    {
                    pushFollow(FOLLOW_floop_in_block193);
                    floop7=floop();

                    state._fsp--;

                    ((program_scope)program_stack.peek()).globals.add((floop7!=null?floop7.st:null));

                    }
                    break;
                case 8 :
                    // PLSQL3.g:38:7: procedure
                    {
                    pushFollow(FOLLOW_procedure_in_block203);
                    procedure8=procedure();

                    state._fsp--;

                    ((program_scope)program_stack.peek()).globals.add((procedure8!=null?procedure8.st:null));

                    }
                    break;
                case 9 :
                    // PLSQL3.g:39:7: function
                    {
                    pushFollow(FOLLOW_function_in_block213);
                    function9=function();

                    state._fsp--;

                    ((program_scope)program_stack.peek()).globals.add((function9!=null?function9.st:null));

                    }
                    break;
                case 10 :
                    // PLSQL3.g:40:7: funccall
                    {
                    pushFollow(FOLLOW_funccall_in_block223);
                    funccall10=funccall();

                    state._fsp--;

                    ((program_scope)program_stack.peek()).globals.add((funccall10!=null?funccall10.st:null));

                    }
                    break;
                case 11 :
                    // PLSQL3.g:41:7: procall
                    {
                    pushFollow(FOLLOW_procall_in_block233);
                    procall11=procall();

                    state._fsp--;

                    ((program_scope)program_stack.peek()).globals.add((procall11!=null?procall11.st:null));

                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "block"

    public static class loops_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "loops"
    // PLSQL3.g:44:1: loops : 'LOOP' ( blockert )+ 'IF' t2= v10 'THEN' 'exit;' 'END IF;' 'END LOOP;' -> findloop(locals=$slist::localst2=$t2.st);
    public final PLSQL3Parser.loops_return loops() throws RecognitionException {
        slist_stack.push(new slist_scope());

        PLSQL3Parser.loops_return retval = new PLSQL3Parser.loops_return();
        retval.start = input.LT(1);

        PLSQL3Parser.v10_return t2 = null;



             ((slist_scope)slist_stack.peek()).locals = new ArrayList();

        try {
            // PLSQL3.g:49:5: ( 'LOOP' ( blockert )+ 'IF' t2= v10 'THEN' 'exit;' 'END IF;' 'END LOOP;' -> findloop(locals=$slist::localst2=$t2.st))
            // PLSQL3.g:49:7: 'LOOP' ( blockert )+ 'IF' t2= v10 'THEN' 'exit;' 'END IF;' 'END LOOP;'
            {
            match(input,10,FOLLOW_10_in_loops263); 
            // PLSQL3.g:50:13: ( blockert )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==11) ) {
                    int LA4_1 = input.LA(2);

                    if ( (LA4_1==39) ) {
                        alt4=1;
                    }


                }
                else if ( (LA4_0==ID||LA4_0==10||LA4_0==16||(LA4_0>=21 && LA4_0<=22)||LA4_0==25||LA4_0==32||LA4_0==34) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // PLSQL3.g:50:13: blockert
            	    {
            	    pushFollow(FOLLOW_blockert_in_loops277);
            	    blockert();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);

            match(input,11,FOLLOW_11_in_loops287); 
            pushFollow(FOLLOW_v10_in_loops291);
            t2=v10();

            state._fsp--;

            match(input,12,FOLLOW_12_in_loops293); 
            match(input,13,FOLLOW_13_in_loops307); 
            match(input,14,FOLLOW_14_in_loops317); 
            match(input,15,FOLLOW_15_in_loops327); 


            // TEMPLATE REWRITE
            // 55:5: -> findloop(locals=$slist::localst2=$t2.st)
            {
                retval.st = templateLib.getInstanceOf("findloop",
              new STAttrMap().put("locals", ((slist_scope)slist_stack.peek()).locals).put("t2", (t2!=null?t2.st:null)));
            }


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            slist_stack.pop();

        }
        return retval;
    }
    // $ANTLR end "loops"

    public static class function_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "function"
    // PLSQL3.g:58:1: function : 'CREATE OR REPLACE FUNCTION' t1= v1 'RETURN' t2= type ';' 'IS' t3= variable 'BEGIN' ( blockert )+ 'RETURN' t5= variable ';' 'END;' -> function(t1=$t1.stt2=$t2.stt3=$t3.stlocals=$slist::localst5=$t5.st);
    public final PLSQL3Parser.function_return function() throws RecognitionException {
        slist_stack.push(new slist_scope());

        PLSQL3Parser.function_return retval = new PLSQL3Parser.function_return();
        retval.start = input.LT(1);

        PLSQL3Parser.v1_return t1 = null;

        PLSQL3Parser.type_return t2 = null;

        PLSQL3Parser.variable_return t3 = null;

        PLSQL3Parser.variable_return t5 = null;



             ((slist_scope)slist_stack.peek()).locals = new ArrayList();

        try {
            // PLSQL3.g:63:5: ( 'CREATE OR REPLACE FUNCTION' t1= v1 'RETURN' t2= type ';' 'IS' t3= variable 'BEGIN' ( blockert )+ 'RETURN' t5= variable ';' 'END;' -> function(t1=$t1.stt2=$t2.stt3=$t3.stlocals=$slist::localst5=$t5.st))
            // PLSQL3.g:63:7: 'CREATE OR REPLACE FUNCTION' t1= v1 'RETURN' t2= type ';' 'IS' t3= variable 'BEGIN' ( blockert )+ 'RETURN' t5= variable ';' 'END;'
            {
            match(input,16,FOLLOW_16_in_function373); 
            pushFollow(FOLLOW_v1_in_function377);
            t1=v1();

            state._fsp--;

            match(input,17,FOLLOW_17_in_function387); 
            pushFollow(FOLLOW_type_in_function404);
            t2=type();

            state._fsp--;

            match(input,18,FOLLOW_18_in_function406); 
            match(input,19,FOLLOW_19_in_function416); 
            pushFollow(FOLLOW_variable_in_function434);
            t3=variable();

            state._fsp--;

            match(input,8,FOLLOW_8_in_function444); 
            // PLSQL3.g:69:13: ( blockert )+
            int cnt5=0;
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==ID||(LA5_0>=10 && LA5_0<=11)||LA5_0==16||(LA5_0>=21 && LA5_0<=22)||LA5_0==25||LA5_0==32||LA5_0==34) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // PLSQL3.g:69:13: blockert
            	    {
            	    pushFollow(FOLLOW_blockert_in_function458);
            	    blockert();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt5 >= 1 ) break loop5;
                        EarlyExitException eee =
                            new EarlyExitException(5, input);
                        throw eee;
                }
                cnt5++;
            } while (true);

            match(input,17,FOLLOW_17_in_function473); 
            pushFollow(FOLLOW_variable_in_function477);
            t5=variable();

            state._fsp--;

            match(input,18,FOLLOW_18_in_function479); 
            match(input,20,FOLLOW_20_in_function489); 


            // TEMPLATE REWRITE
            // 72:9: -> function(t1=$t1.stt2=$t2.stt3=$t3.stlocals=$slist::localst5=$t5.st)
            {
                retval.st = templateLib.getInstanceOf("function",
              new STAttrMap().put("t1", (t1!=null?t1.st:null)).put("t2", (t2!=null?t2.st:null)).put("t3", (t3!=null?t3.st:null)).put("locals", ((slist_scope)slist_stack.peek()).locals).put("t5", (t5!=null?t5.st:null)));
            }


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            slist_stack.pop();

        }
        return retval;
    }
    // $ANTLR end "function"

    public static class wloop_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "wloop"
    // PLSQL3.g:75:1: wloop : 'WHILE' t2= v10 'LOOP' ( blockert )+ 'END LOOP;' -> wloop(locals=$slist::localst2=$t2.st);
    public final PLSQL3Parser.wloop_return wloop() throws RecognitionException {
        slist_stack.push(new slist_scope());

        PLSQL3Parser.wloop_return retval = new PLSQL3Parser.wloop_return();
        retval.start = input.LT(1);

        PLSQL3Parser.v10_return t2 = null;



             ((slist_scope)slist_stack.peek()).locals = new ArrayList();

        try {
            // PLSQL3.g:80:5: ( 'WHILE' t2= v10 'LOOP' ( blockert )+ 'END LOOP;' -> wloop(locals=$slist::localst2=$t2.st))
            // PLSQL3.g:80:7: 'WHILE' t2= v10 'LOOP' ( blockert )+ 'END LOOP;'
            {
            match(input,21,FOLLOW_21_in_wloop558); 
            pushFollow(FOLLOW_v10_in_wloop562);
            t2=v10();

            state._fsp--;

            match(input,10,FOLLOW_10_in_wloop564); 
            // PLSQL3.g:81:13: ( blockert )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==ID||(LA6_0>=10 && LA6_0<=11)||LA6_0==16||(LA6_0>=21 && LA6_0<=22)||LA6_0==25||LA6_0==32||LA6_0==34) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // PLSQL3.g:81:13: blockert
            	    {
            	    pushFollow(FOLLOW_blockert_in_wloop578);
            	    blockert();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);

            match(input,15,FOLLOW_15_in_wloop588); 


            // TEMPLATE REWRITE
            // 83:8: -> wloop(locals=$slist::localst2=$t2.st)
            {
                retval.st = templateLib.getInstanceOf("wloop",
              new STAttrMap().put("locals", ((slist_scope)slist_stack.peek()).locals).put("t2", (t2!=null?t2.st:null)));
            }


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            slist_stack.pop();

        }
        return retval;
    }
    // $ANTLR end "wloop"

    public static class floop_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "floop"
    // PLSQL3.g:86:1: floop : 'FOR' t1= v1 'in' t2= aside1 '..' t3= aside1 'LOOP' ( blockert )+ 'END LOOP;' -> floop(t1=$t1.stt2=$t2.stt3=$t3.stlocals=$slist::locals);
    public final PLSQL3Parser.floop_return floop() throws RecognitionException {
        slist_stack.push(new slist_scope());

        PLSQL3Parser.floop_return retval = new PLSQL3Parser.floop_return();
        retval.start = input.LT(1);

        PLSQL3Parser.v1_return t1 = null;

        PLSQL3Parser.aside1_return t2 = null;

        PLSQL3Parser.aside1_return t3 = null;



             ((slist_scope)slist_stack.peek()).locals = new ArrayList();

        try {
            // PLSQL3.g:92:5: ( 'FOR' t1= v1 'in' t2= aside1 '..' t3= aside1 'LOOP' ( blockert )+ 'END LOOP;' -> floop(t1=$t1.stt2=$t2.stt3=$t3.stlocals=$slist::locals))
            // PLSQL3.g:92:7: 'FOR' t1= v1 'in' t2= aside1 '..' t3= aside1 'LOOP' ( blockert )+ 'END LOOP;'
            {
            match(input,22,FOLLOW_22_in_floop634); 
            pushFollow(FOLLOW_v1_in_floop638);
            t1=v1();

            state._fsp--;

            match(input,23,FOLLOW_23_in_floop640); 
            pushFollow(FOLLOW_aside1_in_floop644);
            t2=aside1();

            state._fsp--;

            match(input,24,FOLLOW_24_in_floop646); 
            pushFollow(FOLLOW_aside1_in_floop650);
            t3=aside1();

            state._fsp--;

            match(input,10,FOLLOW_10_in_floop652); 
            // PLSQL3.g:93:9: ( blockert )+
            int cnt7=0;
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==ID||(LA7_0>=10 && LA7_0<=11)||LA7_0==16||(LA7_0>=21 && LA7_0<=22)||LA7_0==25||LA7_0==32||LA7_0==34) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // PLSQL3.g:93:9: blockert
            	    {
            	    pushFollow(FOLLOW_blockert_in_floop663);
            	    blockert();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt7 >= 1 ) break loop7;
                        EarlyExitException eee =
                            new EarlyExitException(7, input);
                        throw eee;
                }
                cnt7++;
            } while (true);

            match(input,15,FOLLOW_15_in_floop672); 


            // TEMPLATE REWRITE
            // 95:7: -> floop(t1=$t1.stt2=$t2.stt3=$t3.stlocals=$slist::locals)
            {
                retval.st = templateLib.getInstanceOf("floop",
              new STAttrMap().put("t1", (t1!=null?t1.st:null)).put("t2", (t2!=null?t2.st:null)).put("t3", (t3!=null?t3.st:null)).put("locals", ((slist_scope)slist_stack.peek()).locals));
            }


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            slist_stack.pop();

        }
        return retval;
    }
    // $ANTLR end "floop"

    public static class procedure_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "procedure"
    // PLSQL3.g:99:1: procedure : 'CREATE OR REPLACE PROCEDURE' t1= v1 'AS' 'BEGIN' ( blockert )+ 'END;' -> procedure(t1=$t1.stlocals=$slist::locals);
    public final PLSQL3Parser.procedure_return procedure() throws RecognitionException {
        slist_stack.push(new slist_scope());

        PLSQL3Parser.procedure_return retval = new PLSQL3Parser.procedure_return();
        retval.start = input.LT(1);

        PLSQL3Parser.v1_return t1 = null;



             ((slist_scope)slist_stack.peek()).locals = new ArrayList();

        try {
            // PLSQL3.g:104:5: ( 'CREATE OR REPLACE PROCEDURE' t1= v1 'AS' 'BEGIN' ( blockert )+ 'END;' -> procedure(t1=$t1.stlocals=$slist::locals))
            // PLSQL3.g:105:5: 'CREATE OR REPLACE PROCEDURE' t1= v1 'AS' 'BEGIN' ( blockert )+ 'END;'
            {
            match(input,25,FOLLOW_25_in_procedure752); 
            pushFollow(FOLLOW_v1_in_procedure756);
            t1=v1();

            state._fsp--;

            match(input,26,FOLLOW_26_in_procedure762); 
            match(input,8,FOLLOW_8_in_procedure768); 
            // PLSQL3.g:108:9: ( blockert )+
            int cnt8=0;
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==ID||(LA8_0>=10 && LA8_0<=11)||LA8_0==16||(LA8_0>=21 && LA8_0<=22)||LA8_0==25||LA8_0==32||LA8_0==34) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // PLSQL3.g:108:9: blockert
            	    {
            	    pushFollow(FOLLOW_blockert_in_procedure778);
            	    blockert();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt8 >= 1 ) break loop8;
                        EarlyExitException eee =
                            new EarlyExitException(8, input);
                        throw eee;
                }
                cnt8++;
            } while (true);

            match(input,20,FOLLOW_20_in_procedure785); 


            // TEMPLATE REWRITE
            // 110:5: -> procedure(t1=$t1.stlocals=$slist::locals)
            {
                retval.st = templateLib.getInstanceOf("procedure",
              new STAttrMap().put("t1", (t1!=null?t1.st:null)).put("locals", ((slist_scope)slist_stack.peek()).locals));
            }


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            slist_stack.pop();

        }
        return retval;
    }
    // $ANTLR end "procedure"

    public static class conditionals_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "conditionals"
    // PLSQL3.g:116:1: conditionals : 'IF' v4 'THEN' ( blockert )+ 'ELSE' ( blockert1 )+ 'END IF;' -> conditionals(v4=$v4.stlocals=$slist::localsstats=$slist::stats);
    public final PLSQL3Parser.conditionals_return conditionals() throws RecognitionException {
        slist_stack.push(new slist_scope());
